agent/lib/include/agentxx/ffi_api.h

#define AGENTXX_FFI_API_VERSION 1
/* ==================== 错误码 ==================== */

#define AGENTXX_FFI_OK            0  ///< 成功
#define AGENTXX_FFI_ERR_INVALID   -1 ///< 参数非法 (NULL 句柄/空串/非法 JSON 等)
#define AGENTXX_FFI_ERR_STATE     -2 ///< 状态错误 (未 start/已 stop 后调用、io 线程内 stop 等)
#define AGENTXX_FFI_ERR_TIMEOUT   -7  ///< 同步查询等待响应超时
/* ==================== 基础字符串结构体 ==================== */

/// 只读字符串视图: 指向调用方内存 (UTF-8), 不要求 NUL 结尾
typedef struct AgentxxStringView {
    const char* data; ///< 指向 UTF-8 字节序列
    uint64_t    size; ///< 字节数

#ifdef __cplusplus
    AgentxxStringView() :
        data(nullptr),
        size(0) {}

    AgentxxStringView(const char* d, uint64_t n) :
        data(d),
        size(n) {}

    operator const AgentxxStringView*() const {
        return this;
    }

    bool empty() const {
        return data == nullptr || size == 0;
    }
#endif
} AgentxxStringView;
/// 跨 CRT 堆分配字符串 (具有显式所有权: 由宿主库分配, 调用方接管并负责释放)
typedef struct AgentxxString {
    char*    data; ///< 指向堆分配的 UTF-8 字节序列 (以 \0 结尾; 空时为 NULL)
    uint64_t size; ///< 字节数 (不含结尾 \0)

#ifdef __cplusplus
    AgentxxString() :
        data(nullptr),
        size(0) {}

    AgentxxString(char* d, uint64_t n) :
        data(d),
        size(n) {}

    operator const AgentxxString*() const {
        return this;
    }

    bool empty() const {
        return data == nullptr || size == 0;
    }
#endif
} AgentxxString;
/* ==================== 句柄 ==================== */

/// agent 会话运行时句柄 (不透明; 由 agentxx_ffi_create 创建, agentxx_ffi_destroy 销毁)
typedef struct AgentxxFFIAgent AgentxxFFIAgent;
/* ==================== 内存管理 ==================== */

/// 跨 CRT 堆分配原始字节
AGENTXX_FFI_EXPORT void* AGENTXX_FFI_CALL agentxx_ffi_malloc(uint64_t size);
/// 释放由 agentxx_ffi_malloc 分配的裸内存
AGENTXX_FFI_EXPORT void AGENTXX_FFI_CALL agentxx_ffi_free(const void* ptr);
/* ==================== 版本与错误信息 ==================== */

/// 当前 FFI API 版本 (== AGENTXX_FFI_API_VERSION)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_api_version(void);
/// 库版本字符串视图 (静态存储, 勿释放)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_library_version(AgentxxStringView* out);
/// 错误码 → 静态字符串视图 (线程安全, 静态存储, 勿释放)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_strerror(int32_t code, AgentxxStringView* out);
/* ==================== 事件回调 ==================== */

/// agent 事件种类
typedef enum AgentxxFFIEventType {
    AGENTXX_FFI_EVT_READY = 0,     ///< 服务端就绪, 可开始发送输入: {"sessionId"}
    AGENTXX_FFI_EVT_SYNC,          ///< 全量/部分历史同步: wire sync JSON
    AGENTXX_FFI_EVT_DELTA,         ///< 流式增量: wire delta JSON (kind=text_token/...)
    AGENTXX_FFI_EVT_TURN_END,      ///< 轮次结束: wire turn_result JSON
    AGENTXX_FFI_EVT_CONTEXT_STATS, ///< 上下文统计: wire context_stats JSON
    AGENTXX_FFI_EVT_MODEL_INFO,    ///< 模型信息 (查询/切换结果): wire model_info JSON
    AGENTXX_FFI_EVT_COMPONENTS, ///< 启动组件 (MCP/Skill/Memory/插件): wire append_component_info
                                ///< JSON
    AGENTXX_FFI_EVT_INTERRUPT_REQ,     ///< HIL 中断询问 (权限确认/输入收集)
    AGENTXX_FFI_EVT_INTERRUPT_EXPIRED, ///< 中断已过期/已取消: {"interruptId"}
    AGENTXX_FFI_EVT_PLUGIN_DATA,       ///< 插件事件转发: wire plugin_data JSON
    AGENTXX_FFI_EVT_ERROR,             ///< 内部错误: {"code","message"}
} AgentxxFFIEventType;
typedef struct AgentxxFFICallbacks {
    /// 事件回调 (client io 线程; payload_json 仅回调期间有效)
    void(AGENTXX_FFI_CALL*
             on_event)(int32_t type, const AgentxxStringView* payload_json, void* user_data);
    /// 宿主上下文 (原样透传给 on_event)
    void* user_data;
} AgentxxFFICallbacks;
/* ==================== 生命周期 ==================== */

/**
 * 创建 agent 运行时句柄 (未启动; 构造对象, 不启动线程)
 * @param config_json NULL 或 AgentConfig 覆盖 JSON
 * @param model_json 主模型 ModelConfig JSON (建议必填)
 * @param cb 事件回调 (可 NULL = 纯 headless; 内部值拷贝, 回调期间必有效)
 * @param log 非 NULL 时失败填入错误详情 (用后 agentxx_ffi_string_free 释放)
 * @return 句柄; 失败返回 NULL
 */
AGENTXX_FFI_EXPORT AgentxxFFIAgent* AGENTXX_FFI_CALL agentxx_ffi_create(
    const AgentxxStringView*   config_json,
    const AgentxxStringView*   model_json,
    const AgentxxFFICallbacks* cb,
    AgentxxString*             log
);
/// 销毁句柄 (未 stop 时自动 stop; 之后句柄失效; 不得在回调线程内调用)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_destroy(AgentxxFFIAgent* a, AgentxxString* log);
/// 请求取消当前轮次
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_cancel(AgentxxFFIAgent* a, AgentxxString* log);
/* ==================== 同步查询 (阻塞等待服务端响应, 最长 10s) ====================
 * 返回值: int32_t 状态码 (AGENTXX_FFI_OK 成功); out 填入 JSON 结果 (agentxx_ffi_string_free 释放);
 * 失败时 log 含详情 */

/// 当前模型信息: {"currentModel","models":[...]}
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_get_model_info(AgentxxFFIAgent* a, AgentxxString* out, AgentxxString* log);
/// 当前会话 LLM 上下文消息: {"messages":[chat message...]}
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_get_context_messages(AgentxxFFIAgent* a, AgentxxString* out, AgentxxString* log);
/* ==================== HIL 中断应答 ==================== */

/// 提交 EVT_INTERRUPT_REQ 的应答 (values_json 经 JSON 数组表示)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_interrupt_respond(
    AgentxxFFIAgent*         a,
    int64_t                  interrupt_id,
    const AgentxxStringView* values_json,
    AgentxxString*           log
);
/* ==================== 日志 ==================== */

/// 取走运行期间积压的日志条目 (JSON 数组 [{"level","message"},...]; 取走后清空;
/// agentxx_ffi_string_free 释放)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_drain_logs(AgentxxFFIAgent* a, AgentxxString* out, AgentxxString* log);
/* ==================== 异步安全事件队列 ==================== */

/// 事件队列句柄 (不透明)
typedef struct AgentxxFFIEventQueue AgentxxFFIEventQueue;
/// 创建空事件队列 (任意线程; 失败返回 NULL)
AGENTXX_FFI_EXPORT AgentxxFFIEventQueue* AGENTXX_FFI_CALL agentxx_ffi_event_queue_create(void);
/// 销毁队列并释放积压事件 (唤醒全部等待者; 之后句柄失效; 勿与 pop 并发调用)
AGENTXX_FFI_EXPORT void AGENTXX_FFI_CALL agentxx_ffi_event_queue_free(AgentxxFFIEventQueue* q);
/// 内置 on_event 桥接实现 (user_data 必须为 agentxx_ffi_event_queue_create 返回值)
AGENTXX_FFI_EXPORT void AGENTXX_FFI_CALL agentxx_ffi_event_queue_on_event(
    int32_t                  type,
    const AgentxxStringView* payload_json,
    void*                    user_data
);
/**
 * 取出一条事件 (阻塞至多 timeout_ms; 0 = 非阻塞仅探测):
 * - 成功: 返回 AGENTXX_FFI_OK, *type_out 填事件种类, *json_out 填入 payload
 * (agentxx_ffi_string_free 释放)
 * - 队列为空且等待超时: 返回 AGENTXX_FFI_ERR_TIMEOUT
 * - 参数非法/队列已销毁: 返回 AGENTXX_FFI_ERR_INVALID / AGENTXX_FFI_ERR_STATE
 */
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_event_queue_pop(
    AgentxxFFIEventQueue* q,
    int32_t*              type_out,
    AgentxxString*        json_out,
    uint32_t              timeout_ms
);