agent/ffi/dart/lib/agentxx_ffi_bindings.dart

// ---------------------------------------------------------------------------
// libagentxx FFI C API 绑定 (自动生成, 勿手改)。
// 来源头文件: agent/lib/include/agentxx/ffi_api.h (唯一跨版本稳定接口)。
// 再生命令: 在本目录执行 `dart run ffigen` (配置见同目录 ffigen.yaml)。
// 使用前应以 apiVersion 校验 AGENTXX_FFI_API_VERSION 契约一致性。
// ---------------------------------------------------------------------------

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for libagentxx FFI C API (agentxx/ffi_api.h).
class AgentxxFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AgentxxFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AgentxxFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// 请求取消当前轮次
  int agentxx_ffi_cancel(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_cancel(
      a,
      log,
    );
  }

  late final _agentxx_cancelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_cancel');
  late final _agentxx_cancel = _agentxx_cancelPtr.asFunction<
      int Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 创建 agent 运行时句柄 (未启动; 构造对象, 不启动线程)
  /// @param config_json NULL 或 AgentConfig 覆盖 JSON (未知字段忽略):
  /// {
  /// "dataDir": "~/.agentxx",          // 空=不持久化 (默认)
  /// "enableSessionStore": false,
  /// "sessionStoreDirectory": "",     // 为空时使用 {dataDir}/sqlite/sessions/
  /// "permissionMode": "ask",          // ask|all_ask|pass|deny
  /// "permissionAllowPaths": ["..."],  // 权限白名单
  /// "permissionDenyPaths": ["..."],   // 权限黑名单
  /// "skills": ["..."], "memoryFiles": ["..."],
  /// "mcpServers": {"ns": {"url": "...", "timeoutSec": 120}},
  /// "plugins": [{"path": "...", "enabled": true, "sides": "agent|client|auto", "args": {}}],
  /// "llmMaxRetry": 5,
  /// "agentName": "Agentxx",
  /// "interruptTimeoutSec": 0,         // HIL 等待宿主应答超时, 0=不限 (默认)
  /// }
  /// @param model_json 主模型 ModelConfig JSON (建议必填; 可 NULL 但模型必须
  /// isValid: baseUrl 非空 或 apiKey != "EMPTY"):
  /// {
  /// "name": "显示名(默认=modelName)", "type": "openai|anthropic|openai-responses",
  /// "baseUrl": "...", "apiKey": "...", "modelName": "(请求 model 字段)",
  /// "apiPath": "", "connectTimeoutSeconds": 16, "readChunkTimeoutSeconds": 100,
  /// "sslVerify": true|null, "maxConcurrentConnections": 5,
  /// "anthropicVersion": "2023-06-01", "modelContextMaxToken": 0,
  /// "extraHeaders": {"k": "v"}, "extraConfig": {}
  /// }
  /// @param cb 事件回调 (可 NULL = 纯 headless; 内部值拷贝, 回调期间必有效)
  /// @param log 非 NULL 时失败填入错误详情 (agentxx_ffi_free 释放)
  /// @return 句柄; 失败返回 NULL
  ffi.Pointer<AgentxxFFIAgent> agentxx_ffi_create(
    ffi.Pointer<ffi.Char> config_json,
    ffi.Pointer<ffi.Char> model_json,
    ffi.Pointer<AgentxxFFICallbacks> cb,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_create(
      config_json,
      model_json,
      cb,
      log,
    );
  }

  late final _agentxx_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AgentxxFFIAgent> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<AgentxxFFICallbacks>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_create');
  late final _agentxx_create = _agentxx_createPtr.asFunction<
      ffi.Pointer<AgentxxFFIAgent> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<AgentxxFFICallbacks>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 销毁句柄 (未 stop 时自动 stop; 之后句柄失效; 不得在回调线程内调用)
  int agentxx_ffi_destroy(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_destroy(
      a,
      log,
    );
  }

  late final _agentxx_destroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_destroy');
  late final _agentxx_destroy = _agentxx_destroyPtr.asFunction<
      int Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 取走运行期间积压的日志条目 (JSON 数组 [{"level","message"},...]; 取走后清空;
  /// agentxx_ffi_free 释放) —— 供宿主在异常后转储排障:
  /// {"level": "info|warn|error", "message": "..."}
  ffi.Pointer<ffi.Char> agentxx_ffi_drain_logs(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_drain_logs(
      a,
      log,
    );
  }

  late final _agentxx_drain_logsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_drain_logs');
  late final _agentxx_drain_logs = _agentxx_drain_logsPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 创建空事件队列 (任意线程; 失败返回 NULL)
  ffi.Pointer<AgentxxFFIEventQueue> agentxx_ffi_event_queue_create() {
    return _agentxx_event_queue_create();
  }

  late final _agentxx_event_queue_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<AgentxxFFIEventQueue> Function()>>(
          'agentxx_ffi_event_queue_create');
  late final _agentxx_event_queue_create = _agentxx_event_queue_createPtr
      .asFunction<ffi.Pointer<AgentxxFFIEventQueue> Function()>();

  /// 销毁队列并释放积压事件 (唤醒全部等待者; 之后句柄失效; 勿与 pop 并发调用)
  void agentxx_ffi_event_queue_free(
    ffi.Pointer<AgentxxFFIEventQueue> q,
  ) {
    return _agentxx_event_queue_free(
      q,
    );
  }

  late final _agentxx_event_queue_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<AgentxxFFIEventQueue>)>>(
      'agentxx_ffi_event_queue_free');
  late final _agentxx_event_queue_free = _agentxx_event_queue_freePtr
      .asFunction<void Function(ffi.Pointer<AgentxxFFIEventQueue>)>();

  /// 内置 on_event 桥接实现 (user_data 必须为 agentxx_ffi_event_queue_create 返回值):
  /// 与 AgentxxFFICallbacks.on_event 签名一致, 任意线程安全, 仅拷贝不阻塞 io
  void agentxx_ffi_event_queue_on_event(
    AgentxxFFIEventType type,
    ffi.Pointer<ffi.Char> payload_json,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _agentxx_event_queue_on_event(
      type.value,
      payload_json,
      user_data,
    );
  }

  late final _agentxx_event_queue_on_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.UnsignedInt, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>)>>('agentxx_ffi_event_queue_on_event');
  late final _agentxx_event_queue_on_event =
      _agentxx_event_queue_on_eventPtr.asFunction<
          void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>)>();

  /// 取出一条事件 (阻塞至多 timeout_ms; 0 = 非阻塞仅探测):
  /// - 成功: 返回 AGENTXX_FFI_OK, *type_out 填事件种类, *json_out 为 NUL 结尾 UTF-8
  /// payload (agentxx_ffi_malloc 分配, 宿主用后必须 agentxx_ffi_free 释放)
  /// - 队列为空且等待超时: 返回 AGENTXX_FFI_ERR_TIMEOUT (*json_out 置 NULL)
  /// - 参数非法/队列已销毁: 返回 AGENTXX_FFI_ERR_INVALID / AGENTXX_FFI_ERR_STATE
  int agentxx_ffi_event_queue_pop(
    ffi.Pointer<AgentxxFFIEventQueue> q,
    ffi.Pointer<ffi.Int32> type_out,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_out,
    int timeout_ms,
  ) {
    return _agentxx_event_queue_pop(
      q,
      type_out,
      json_out,
      timeout_ms,
    );
  }

  late final _agentxx_event_queue_popPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<AgentxxFFIEventQueue>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32)>>('agentxx_ffi_event_queue_pop');
  late final _agentxx_event_queue_pop = _agentxx_event_queue_popPtr.asFunction<
      int Function(ffi.Pointer<AgentxxFFIEventQueue>, ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// 当前 FFI API 版本 (== AGENTXX_FFI_API_VERSION)
  int agentxx_ffi_api_version() {
    return _agentxx_ffi_api_version();
  }

  late final _agentxx_ffi_api_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'agentxx_ffi_api_version');
  late final _agentxx_ffi_api_version =
      _agentxx_ffi_api_versionPtr.asFunction<int Function()>();

  /// 库版本字符串 (静态存储, 勿释放)
  ffi.Pointer<ffi.Char> agentxx_ffi_library_version() {
    return _agentxx_ffi_library_version();
  }

  late final _agentxx_ffi_library_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'agentxx_ffi_library_version');
  late final _agentxx_ffi_library_version = _agentxx_ffi_library_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// 错误码 → 静态字符串 (线程安全, 静态存储, 勿释放)
  ffi.Pointer<ffi.Char> agentxx_ffi_strerror(
    int code,
  ) {
    return _agentxx_ffi_strerror(
      code,
    );
  }

  late final _agentxx_ffi_strerrorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
          'agentxx_ffi_strerror');
  late final _agentxx_ffi_strerror = _agentxx_ffi_strerrorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  void agentxx_ffi_free(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _agentxx_free(
      ptr,
    );
  }

  late final _agentxx_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'agentxx_ffi_free');
  late final _agentxx_free =
      _agentxx_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// 当前会话 LLM 上下文消息: {"messages":[chat message...]}
  ffi.Pointer<ffi.Char> agentxx_ffi_get_context_messages(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_get_context_messages(
      a,
      log,
    );
  }

  late final _agentxx_get_context_messagesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<AgentxxFFIAgent>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_get_context_messages');
  late final _agentxx_get_context_messages =
      _agentxx_get_context_messagesPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 当前模型信息: {"currentModel","models":[...]}
  ffi.Pointer<ffi.Char> agentxx_ffi_get_model_info(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_get_model_info(
      a,
      log,
    );
  }

  late final _agentxx_get_model_infoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<AgentxxFFIAgent>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_get_model_info');
  late final _agentxx_get_model_info = _agentxx_get_model_infoPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 提交 EVT_INTERRUPT_REQ 的应答 (values_json 见该事件注释; 任意线程可调用)
  int agentxx_ffi_interrupt_respond(
    ffi.Pointer<AgentxxFFIAgent> a,
    int interrupt_id,
    ffi.Pointer<ffi.Char> values_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_interrupt_respond(
      a,
      interrupt_id,
      values_json,
      log,
    );
  }
